opam-version: "2.0"
name: "msat-bin"
synopsis: "SAT solver binary based on the msat library"
license: "Apache"
version: "0.8"
author: ["Simon Cruanes" "Guillaume Bury"]
maintainer: ["guillaume.bury@gmail.com" "simon.cruanes.2007@m4x.org"]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.03" }
  "dune" {build}
  "msat" { >= "0.8" < "0.9" }
  "camlzip"
]
tags: [ "sat" ]
homepage: "https://github.com/Gbury/mSAT"
dev-repo: "git+https://github.com/Gbury/mSAT.git"
bug-reports: "https://github.com/Gbury/mSAT/issues/"

