opam-version: "2.0"
name: "msat"
synopsis: "Library containing a SAT solver that can be parametrized by a theory"
license: "Apache"
version: "0.8"
author: ["Simon Cruanes" "Guillaume Bury"]
maintainer: ["guillaume.bury@gmail.com" "simon.cruanes.2007@m4x.org"]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" { >= "4.03" }
  "dune" {build}
  "iter" { >= "1.2" }
  "containers" {with-test}
  "mdx" {with-test}
]
tags: [ "sat" "smt" ]
homepage: "https://github.com/Gbury/mSAT"
dev-repo: "git+https://github.com/Gbury/mSAT.git"
bug-reports: "https://github.com/Gbury/mSAT/issues/"

