
(executable
  (name test_api)
  (libraries msat msat_sat)
  (flags :standard -w +a-4-42-44-48-50-58-32-60@8 -color always -safe-string -open Msat)
  (ocamlopt_flags :standard -O3 -color always
                  -unbox-closures -unbox-closures-factor 20)
  )

(alias
 (name    runtest)
 (deps    test_api.exe)
 (action  (run %{deps})))

(alias
 (name    runtest)
 (deps    ./icnf-solve/icnf_solve.exe Makefile (source_tree regression))
 (action  (run make test-icnf)))

(alias
 (name    runtest)
 (deps    ./../src/sudoku/sudoku_solve.exe Makefile (source_tree sudoku))
 (action  (run make test-sudoku)))
