
(executable
  (name test_api)
  (libraries msat msat_sat)
  (flags :standard -w +a-4-42-44-48-50-58-32-60@8 -color always -safe-string -open Msat)
  (ocamlopt_flags :standard -O3 -color always
                  -unbox-closures -unbox-closures-factor 20)
  )

(alias
 (name    runtest)
  (package msat)
 (deps    test_api.exe)
 (locks test)
 (action  (run %{deps})))

(alias
 (name    runtest)
  (package msat)
 (deps    ./icnf-solve/icnf_solve.exe Makefile (source_tree regression))
 (locks test)
 (action  (run make test-icnf)))

(alias
 (name    runtest)
  (package msat)
 (deps    ./../src/sudoku/sudoku_solve.exe Makefile (source_tree sudoku))
 (locks test)
 (action  (run make test-sudoku)))

(alias
  (name runtest)
  (package msat-bin)
  (deps   ./../src/main/main.exe ./run (source_tree .))
  (locks test)
  (action (run /usr/bin/time -f "%e" ./run sat)))
