
(library
  (name msat_backtrack)
  (public_name msat.backtrack)
  (libraries msat)
  (synopsis "backtrackable data structures for msat")
  (flags :standard -warn-error -3 -w +a-4-42-44-48-50-58-32-60@8
         -color always -safe-string -open Msat)
  (ocamlopt_flags :standard -O3 -bin-annot
                  -unbox-closures -unbox-closures-factor 20)
  )
