
(library
  (name msat_res_proof)
  (public_name msat.res-proof)
  (libraries msat)
  (synopsis "resolution proof data structure for msat")
  (flags :standard -w +a-4-42-44-48-50-58-32-60@8 -color always -safe-string -open Msat)
  (ocamlopt_flags :standard -O3 -bin-annot
                  -unbox-closures -unbox-closures-factor 20)
)
