
(library
  (name msat_sat)
  (public_name msat.sat)
  (synopsis "purely boolean interface to Msat")
  (libraries msat)
  (flags :standard -warn-error -3 -w +a-4-42-44-48-50-58-32-60@8 -color always -safe-string -open Msat)
  (ocamlopt_flags :standard -O3 -color always
                  -unbox-closures -unbox-closures-factor 20)
  )

