
(executable
  (name sudoku_solve)
  (modes native)
  (libraries msat msat.backtrack iter containers)
  (flags :standard -warn-error -a -w +a-4-42-44-48-50-58-32-60@8 -color always -safe-string)
  (ocamlopt_flags :standard -O3 -bin-annot
                  -unbox-closures -unbox-closures-factor 20)
)
